--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--New version 06.09-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.htm">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -23,7 +24,7 @@
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+11(000)1111111">+11(000)111-11-11</a>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
@@ -63,22 +64,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/team-1.png" alt="Mark Guerrero" width="264" height="260" />
+                    <img src="./images/team-1.jpg" alt="Mark Guerrero" width="264" height="260" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/team-2.png" alt="Tom Ford" width="264" height="260" />
+                    <img src="./images/team-2.jpg" alt="Tom Ford" width="264" height="260" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/team-3.png" alt="Camila Garcia" width="264" height="260" />
+                    <img src="./images/team-3.jpg" alt="Camila Garcia" width="264" height="260" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/team-4.png" alt="Daniel Wilson" width="264" height="260" />
+                    <img src="./images/team-4.jpg" alt="Daniel Wilson" width="264" height="260" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
